Amended mailto, added Favicon

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Takumi Consulting</title>
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -14,7 +15,7 @@
 <br><br>
 
 I specialise in agile delivery, technology solutions and product management. Get in touch to discuss your project needs!</p>
-            <br><a href="mailto:martyn@takumitechconsulting.com" class="contact-link">Contact Me</a>
+            <br><a href="mailto:martyn@takumitechconsulting.co.uk?subject=Enquiry" class="contact-link">Contact Me</a>
         </main>
         <footer>
             <p>&copy; Takumi Tech Consulting Ltd. 2025</p>
