Added meta tags for better Whatsapp preview

--- a/index.html
+++ b/index.html
@@ -3,7 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Takumi Consulting</title>
+    <meta property="og:title" content="Takumi Tech Consulting – Agile Techology Solutions">
+    <meta property="og:description" content="Expert in agile delivery, technology solutions, and product management. Let's bring your project to life!">
+    <!-- <meta property="og:image" content="https://www.takumitechconsulting.co.uk/og-image.jpg"> -->
+    <meta property="og:url" content="https://www.takumitechconsulting.co.uk">
+    <meta property="og:type" content="website">
+    <title>Takumi Tech Consulting</title>
     <link rel="icon" type="image/x-icon" href="favicon.ico">
     <link rel="stylesheet" href="styles.css">
 </head>
